Dark mode comment via notification bg colour fix
When navigating to a comment by clicking on the notifications, that comment would have a light background. Fixed for dark mode.

--- a/rps.user.css
+++ b/rps.user.css
@@ -515,6 +515,10 @@ body:not(.docked) {
     color: #a9a9a9;
     border-color: #00866b;
 }
+    
+#comments .container .post.highlight>.what .markdown {
+    background-color: inherit;
+}
 
 textarea::placeholder {color: #a9a9a9 !important;}
 
